2.1.0/_sources/gallery/user_interfaces/mathtext_wx_sgskip.rst.txt


.. _sphx_glr_gallery_user_interfaces_mathtext_wx_sgskip.py:


===========
MathText WX
===========

Demonstrates how to convert mathtext to a wx.Bitmap for display in various
controls on wxPython.



.. code-block:: python


    import matplotlib
    matplotlib.use("WxAgg")
    from numpy import arange, sin, pi, cos, log
    from matplotlib.backends.backend_wxagg import FigureCanvasWxAgg as FigureCanvas
    from matplotlib.backends.backend_wx import NavigationToolbar2Wx, wxc
    from matplotlib.figure import Figure

    import wx

    IS_GTK = 'wxGTK' in wx.PlatformInfo
    IS_WIN = 'wxMSW' in wx.PlatformInfo


This is where the "magic" happens.



.. code-block:: python

    from matplotlib.mathtext import MathTextParser
    mathtext_parser = MathTextParser("Bitmap")


    def mathtext_to_wxbitmap(s):
        ftimage, depth = mathtext_parser.parse(s, 150)
        return wxc.BitmapFromBuffer(
            ftimage.get_width(), ftimage.get_height(),
            ftimage.as_rgba_str())


.. code-block:: python


    functions = [
        (r'$\sin(2 \pi x)$', lambda x: sin(2*pi*x)),
        (r'$\frac{4}{3}\pi x^3$', lambda x: (4.0/3.0)*pi*x**3),
        (r'$\cos(2 \pi x)$', lambda x: cos(2*pi*x)),
        (r'$\log(x)$', lambda x: log(x))
    ]


    class CanvasFrame(wx.Frame):
        def __init__(self, parent, title):
            wx.Frame.__init__(self, parent, -1, title, size=(550, 350))
            self.SetBackgroundColour(wxc.NamedColour("WHITE"))

            self.figure = Figure()
            self.axes = self.figure.add_subplot(111)

            self.canvas = FigureCanvas(self, -1, self.figure)

            self.change_plot(0)

            self.sizer = wx.BoxSizer(wx.VERTICAL)
            self.add_buttonbar()
            self.sizer.Add(self.canvas, 1, wx.LEFT | wx.TOP | wx.GROW)
            self.add_toolbar()  # comment this out for no toolbar

            menuBar = wx.MenuBar()

            # File Menu
            menu = wx.Menu()
            menu.Append(wx.ID_EXIT, "E&xit\tAlt-X", "Exit this simple sample")
            menuBar.Append(menu, "&File")

            if IS_GTK or IS_WIN:
                # Equation Menu
                menu = wx.Menu()
                for i, (mt, func) in enumerate(functions):
                    bm = mathtext_to_wxbitmap(mt)
                    item = wx.MenuItem(menu, 1000 + i, " ")
                    item.SetBitmap(bm)
                    menu.AppendItem(item)
                    self.Bind(wx.EVT_MENU, self.OnChangePlot, item)
                menuBar.Append(menu, "&Functions")

            self.SetMenuBar(menuBar)

            self.SetSizer(self.sizer)
            self.Fit()

        def add_buttonbar(self):
            self.button_bar = wx.Panel(self)
            self.button_bar_sizer = wx.BoxSizer(wx.HORIZONTAL)
            self.sizer.Add(self.button_bar, 0, wx.LEFT | wx.TOP | wx.GROW)

            for i, (mt, func) in enumerate(functions):
                bm = mathtext_to_wxbitmap(mt)
                button = wx.BitmapButton(self.button_bar, 1000 + i, bm)
                self.button_bar_sizer.Add(button, 1, wx.GROW)
                self.Bind(wx.EVT_BUTTON, self.OnChangePlot, button)

            self.button_bar.SetSizer(self.button_bar_sizer)

        def add_toolbar(self):
            """Copied verbatim from embedding_wx2.py"""
            self.toolbar = NavigationToolbar2Wx(self.canvas)
            self.toolbar.Realize()
            # By adding toolbar in sizer, we are able to put it at the bottom
            # of the frame - so appearance is closer to GTK version.
            self.sizer.Add(self.toolbar, 0, wx.LEFT | wx.EXPAND)
            # update the axes menu on the toolbar
            self.toolbar.update()

        def OnChangePlot(self, event):
            self.change_plot(event.GetId() - 1000)

        def change_plot(self, plot_number):
            t = arange(1.0, 3.0, 0.01)
            s = functions[plot_number][1](t)
            self.axes.clear()
            self.axes.plot(t, s)
            self.canvas.draw()


    class MyApp(wx.App):
        def OnInit(self):
            frame = CanvasFrame(None, "wxPython mathtext demo app")
            self.SetTopWindow(frame)
            frame.Show(True)
            return True

    app = MyApp()
    app.MainLoop()

**Total running time of the script:** ( 0 minutes  0.000 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: mathtext_wx_sgskip.py <mathtext_wx_sgskip.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: mathtext_wx_sgskip.ipynb <mathtext_wx_sgskip.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
